--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simple geotagging app. Guess the name ofthe street on the picture."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     
-    <title>React App</title>
+    <title>Geotagger</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
